# jiffy

./: .gitignore  README.md  jira.cfg.example  pyproject.toml
jiffy/: cli.py  client.py  utils.py
tests/: test_jiffy.py
