[tool.poetry]
name = "jiffy"
version = "0.1.0"
description = ""
authors = ["Ross Gray <rossagray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jira = "^2.0.0"
click = "^7.1.2"
PyInquirer = "^1.0.3"
rich = "^9.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
